fix dark mode

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -42,11 +42,9 @@
 
 /* 黑夜模式样式 */
 .dark-mode {
-  body {
     background-color: #121212; /* 黑色背景 */
     color: #e0e0e0; /* 浅色字体 */
-  }
-
+    
   a {
     color: #bb86fc; /* 链接的颜色 */
   }
